fixed disalignment in styles of Create New Player, and Create New Scrabble page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -462,6 +462,7 @@ label.triple-letter-checkbox-label {
 #num-of-players-dropdown {
     color: #427a63;
     text-indent: 20px;
+    font-size: 40px;
     width: 100px; }
 
 #remaining-letters-table
@@ -541,7 +542,7 @@ label.triple-letter-checkbox-label {
     letter-spacing: 1.55em;
     padding: 0;
     width: 415px; }
- 
+
 @media all and (max-width:900px) 
 {
 
@@ -659,7 +660,7 @@ label.triple-letter-checkbox-label {
     div.new-word-submit-btn {
         margin-top: 1vw;
         text-align: center;
-        > #new-word-submit, #new-word-submit-pass{
+        > #new-word-submit, #new-word-submit-pass, #edit-word-cancel, #edit-delete-word{
             font-size: 2vw;
         }
     }
@@ -740,5 +741,130 @@ label.triple-letter-checkbox-label {
     #existing-letter-checkbox {
         margin-bottom: 0.5vw;
     }
+
+    #num-of-players-dropdown {
+        color: #427a63;
+        text-indent: 1.5vw;
+        font-size: 4vw;
+        width: 10vw; }
+    
+    div#create-new-player-name {
+        font-size: 1vw;
+        font-weight: 350;
+        text-align: left; }
  
+ 
+    div#create-new-player-name-label {
+        font-size: 1.1em;
+        font-weight: 350;
+        margin-left: 20vw;
+        margin-right: 1.8vw;
+        text-align: left; }
+     
+     
+    div#create-new-player-turn {
+        font-size: 1.1em;
+        font-weight: 350;
+        margin-top: 1vw;
+        text-align: left; }
+     
+     
+    div#create-new-player-turn-label {
+        font-size: 1.1em;
+        font-weight: 350;
+        margin-left: 20vw;
+        margin-right: 3.2vw;
+        margin-top: 1vw;
+        text-align: left; }
+
+    input[type=text]#create-new-player-name-input {
+        background-color: #a4e1c7;
+        border-radius: 1vw;
+        border: 1px solid #74b69a;
+        color: #427a63;
+        font-size: 2vw;
+        margin-bottom: 1vw;
+        padding: 0.5vw 0.5vw;
+        text-align: left;
+        width: 40vw; }
+
+    input[type=number]#create-new-player-turn-input {
+        background-color: #a4e1c7;
+        border-radius: 1vw;
+        border: 1px solid #74b69a;
+        color: #427a63;
+        font-size: 2vw;
+        margin-bottom: 1vw;
+        padding: 0.5vw 0.5vw;
+        text-align: center;
+        width: 6vw; }
+
+
+    div.num-of-words {
+        margin-left: 1.5vw;
+        margin-top: 0.4vw;
+        div.num-of-words-input {
+            input {
+                vertical-align: center;
+                width: 5vw;
+                height: 4vw;
+                border-style: solid;
+                border-width: 0;
+                color: #fff;
+                background-color: #5EAA8C;
+                text-align: center;
+                margin-top: 1px;
+                margin-left: 0;
+            }
+            input:disabled {
+                background-color: #DDD;
+                color: #AAA;
+            }
+        }
+        div.num-of-words-minus-button {
+            button {
+                vertical-align: center;
+                width: 3vw;
+                height:4vw;
+                border-style: solid;
+                border-width: 1px;
+                border-color: #5EAA8C;
+                background-color: #fff;
+                color: #5EAA8C;
+                margin-left: 10px;
+                margin-right: 0;
+                margin-top: 1px;
+                text-align: center;
+                padding: 0 0;
+            }
+
+            button:disabled {
+                border-style: solid;
+                border-color: #DDD;
+                background-color: #DDD;
+                color: #AAA;
+            }
+        }
+        div.num-of-words-plus-button {
+            button {
+                vertical-align: center;
+                width: 3vw;
+                height:4vw;
+                border-style: solid;
+                border-width: 1px;
+                border-color: #5EAA8C;
+                background-color: #fff;
+                color: #5EAA8C;
+                margin-right: 0;
+                margin-top: 1px;
+                text-align: center;
+                padding: 0 0;
+            }
+            button:disabled {
+                border-color: #DDD;
+                background-color: #DDD;
+                color: #AAA;
+            }
+        }
+    }
 }
